[package]
name = "btsim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk_coin_select = "0.3.0"
bitcoin = "0.32.1"
bitcoin-units = "0.1.1"
im = "15.1.0"
knaptime = "0.0.4"
paste = "1.0.15"
petgraph = "0.8.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
lattice-psbt = { git = "https://github.com/arminsabouri/lattice-psbt", branch = "master" }
rustworkx-core = "0.17.1"
colorous = "1.0.16"
graphalgs = "0.2.0"
graphviz-rust = "0.9.6"
